media/Sonarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
  - port: 8989
    targetPort: 8989
    protocol: TCP
